FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
INCLUDE(UseJava)

INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
IF (DISABLE_SWIG OR NOT SWIG_EXECUTABLE)
	FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/interface/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	add_library(JNIgriddyn SHARED interface/griddynJavaJAVA_wrap.c)
	target_link_libraries(JNIgriddyn griddynSharedLib ${JAVA_LIBRARIES})
	set_target_properties (JNIgriddyn PROPERTIES FOLDER interfaces)
ELSE(DISABLE_SWIG)
#Enable generation using swig
	INCLUDE(UseSWIG)
	SET_PROPERTY(SOURCE griddynJava.i PROPERTY SWIG_MODULE_NAME JNIgriddyn)

	set(CMAKE_SWIG_FLAGS "-package;com.java.griddyn")
	IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} VERSION_GREATER 3.7)
		SWIG_ADD_LIBRARY(JNIgriddyn TYPE MODULE LANGUAGE java SOURCES griddynJava.i)
	ELSE ()
		SWIG_ADD_MODULE(JNIgriddyn java griddynJava.i)
	ENDIF ()

	SWIG_LINK_LIBRARIES(JNIgriddyn griddyn_shared_lib)
	SWIG_LINK_LIBRARIES(JNIgriddyn ${JAVA_LIBRARIES})


	set_target_properties (JNIgriddyn PROPERTIES FOLDER interfaces)

	if (APPLE)

		# SET_TARGET_PROPERTIES(griddynSharedLib PROPERTIES MACOSX_RPATH TRUE)
		# SET_TARGET_PROPERTIES(griddynSharedLib PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

		# SET_TARGET_PROPERTIES(_griddyn PROPERTIES MACOSX_RPATH TRUE)
		# SET_TARGET_PROPERTIES(_griddyn PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH
		# SET_TARGET_PROPERTIES(griddyn PROPERTIES INSTALL_RPATH "@loader_path/../../..")

	else()

		# SET_TARGET_PROPERTIES(_griddyn PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
		# SET_TARGET_PROPERTIES(_griddyn PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)

	endif()

ENDIF() #DISABLE_SWIG

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/MakeJarCMakeLists.txt.in ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt @ONLY)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/buildjar/)

# -D ADDITIONAL_JAR_FILES=$<TARGET_FILE:griddyn_shared_lib>;$<TARGET_FILE:JNIgriddyn>
ADD_CUSTOM_COMMAND(
    TARGET "JNIgriddyn" POST_BUILD
    COMMAND ${CMAKE_COMMAND} -D LIBRARY_FILE=$<TARGET_FILE:JNIgriddyn> -P ${CMAKE_CURRENT_SOURCE_DIR}/addLoadLibraryCommand.cmake
)

ADD_CUSTOM_COMMAND(
    TARGET "JNIgriddyn" POST_BUILD 
    COMMAND ${CMAKE_COMMAND} 
	ARGS ..
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildjar"
	VERBATIM
)

ADD_CUSTOM_COMMAND(
    TARGET "JNIgriddyn" POST_BUILD
    COMMAND ${CMAKE_COMMAND} 
	ARGS  --build . --target griddyn
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildjar/"
    COMMENT "Building jar file" 
	VERBATIM
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/buildjar/griddyn.jar DESTINATION java COMPONENT java)
INSTALL(FILES $<TARGET_FILE:griddyn_shared_lib> DESTINATION java COMPONENT java)
INSTALL(TARGETS JNIgriddyn DESTINATION java COMPONENT java)
INSTALL(FILES ${KEY_LIBRARY_FILES} DESTINATION java COMPONENT java)
